--- a/js-micro-components/social-dashboard/style.css
+++ b/js-micro-components/social-dashboard/style.css
@@ -39,7 +39,7 @@ html[data-theme='dark'] {
   --color-text: hsl(228, 34%, 66%);
   --color-text-m: hsl(0, 0%, 100%);
 
-  --color-toggle: linear-gradient(to hsl(210, 78%, 56%), hsl(146, 68%, 55%));
+  --color-toggle: linear-gradient(hsl(210, 78%, 56%), hsl(146, 68%, 55%));
 }
 
 html.transition,
@@ -123,13 +123,37 @@ a:visited {
   align-items: center;
 }
 
-.toggle--input {
-  /* padding: 1.5rem 4rem; */
-  height: 2rem;
-  opacity: 0;
+input[type='checkbox'] {
+  position: relative;
+  background: var(--color-toggle);
+  width: 6rem;
+  height: 3rem;
+  border-radius: 2.5rem;
+  cursor: pointer;
+
+  /* This removes the default appearance of the checkbox */
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
-.toggle--slider {
+input[type='checkbox']:hover,
+input[type='checkbox']:active {
+  background: linear-gradient(hsl(210, 78%, 56%), hsl(146, 68%, 55%));
+}
+
+input[type='checkbox']::before {
+  content: '';
+  position: absolute;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  top: 0.25rem;
+  right: 0.5rem;
+  background-color: var(--color-card);
+}
+
+input[type='checkbox']:checked:before {
+  transform: translateX(-2.5rem);
 }
 
 .socials__header--toggle p {
@@ -158,22 +182,29 @@ a:visited {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  cursor: pointer;
 }
 
-.socials__card:first-child {
+.socials__card--account-1 {
   border-top-color: var(--color-facebook);
 }
 
-.socials__card:nth-child(2) {
-  border-top-color: var(--color-twitter);
+.socials__card--account-2 {
+  border-top-color: var(--color-facebook);
 }
 
-.socials__card:nth-child(3) {
-  border-top-color: var(--color-instagram);
+.socials__card--account-3 {
+  /* border-top: initial; */
+  border-top-color: hsl(329, 70%, 58%);
 }
 
-.socials__card:nth-child(4) {
+.socials__card--account-4 {
   border-top-color: var(--color-youtube);
+}
+
+.socials__card:hover,
+.socials__card:active {
+  opacity: 0.7;
 }
 
 .socials__card--user {
