--- a/js-micro-components/social-dashboard/style.css
+++ b/js-micro-components/social-dashboard/style.css
@@ -392,4 +392,15 @@ input[type='checkbox']:checked:before {
     justify-content: initial;
     flex-direction: initial;
   }
+
+  input[type='checkbox'] {
+    width: 5.5rem;
+  }
+
+  input[type='checkbox']::before {
+    width: 2.5rem;
+    height: 2.5rem;
+    top: 0.25rem;
+    right: 0.25rem;
+  }
 }
