--- a/CSS-HTML-projects/insure-landing-page/style.css
+++ b/CSS-HTML-projects/insure-landing-page/style.css
@@ -214,6 +214,92 @@ a:visited {
   background-color: var(--color-secondary-light);
   transition: all 0.5s ease-in-out;
 }
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: url('./images/bg-pattern-footer-desktop.svg'),
+    var(--color-secondary-light);
+  background-repeat: no-repeat;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 6rem 4rem;
+}
+
+.footer__header {
+  /* width: 100%; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 3rem;
+  padding-bottom: 2rem;
+  border-bottom: solid 0.1rem var(--color-secondary-dark);
+}
+
+.footer__header--socials {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.footer__header--socials li {
+  margin-right: 2rem;
+}
+
+.footer__header--socials li:last-child {
+  margin-right: initial;
+}
+/* TODO: On hover icons */
+
+.footer__content {
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.footer__content--column {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 100%;
+}
+
+.footer__content--column > p {
+  justify-self: center;
+
+  font-size: 1.3rem;
+  color: var(--color-secondary-dark);
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  margin-bottom: 1.5rem;
+  font-weight: 400;
+}
+
+.footer__content--contact,
+.footer__content--others {
+  margin-bottom: 2.2rem;
+}
+
+.footer__content--column div > p {
+  margin-bottom: 0.7rem;
+  font-weight: 700;
+  font-size: 700;
+  color: var(--color-primary);
+  text-transform: uppercase;
+  font-size: 1.1rem;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+}
+
+.footer__content--column div > p:hover,
+.footer__content--column div > p:active {
+  text-decoration: underline 0.2rem var(--color-primary);
+}
 
 .attribution {
   padding: 1.5rem;
@@ -302,6 +388,13 @@ a:visited {
     width: 60%;
     text-align: center;
     margin-bottom: 5rem;
+  }
+
+  .footer__content {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
   }
 }
 
@@ -397,5 +490,49 @@ a:visited {
     font-size: 2.5rem;
     margin-bottom: 4rem;
     width: 100%;
+  }
+
+  .footer {
+    background: initial;
+    background: url('./images/bg-pattern-footer-mobile.svg'),
+      var(--color-secondary-light);
+    background-repeat: no-repeat;
+  }
+
+  .footer__header {
+    /* width: 100%; */
+
+    margin-bottom: 3rem;
+    padding-bottom: 2rem;
+
+    flex-direction: column;
+  }
+
+  .footer__header--logo {
+    margin-bottom: 2rem;
+  }
+
+  .footer__content {
+    width: 100%;
+    flex-direction: column;
+    /* text-align: center; */
+  }
+
+  .footer__content--column {
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    margin-bottom: 1.5rem;
+  }
+
+  .footer__content--column > p {
+    justify-self: center;
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+  }
+
+  .footer__content--column div > p {
+    font-size: 1.3rem;
+    margin-bottom: 1rem;
   }
 }
