--- a/CSS-HTML-projects/insure-landing-page/style.css
+++ b/CSS-HTML-projects/insure-landing-page/style.css
@@ -121,6 +121,78 @@ a:visited {
   color: var(--color-secondary-light);
 }
 
+.hero {
+  background-image: url('./images/bg-pattern-intro-left-desktop.svg'),
+    url('./images/bg-pattern-intro-right-desktop.svg'),
+    linear-gradient(to bottom, var(--color-primary) 60%, transparent 40%);
+  background-repeat: no-repeat, no-repeat;
+  background-position: bottom left, top right;
+  display: flex;
+  justify-content: center;
+}
+
+.hero-container {
+  margin: 7rem 0;
+  display: flex;
+  /* align-items: center; */
+  width: 80%;
+  color: var(--color-secondary-light);
+  border-top: var(--color-secondary-dark) solid 0.1rem;
+  padding: 4rem 0;
+}
+
+.hero__content {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.hero__content--title {
+  font-size: 5rem;
+  width: 75%;
+  font-family: 'DM Serif Display', serif;
+  line-height: 1;
+
+  margin-bottom: 2rem;
+}
+
+.hero__content--para {
+  color: var(--color-secondary-light);
+  font-size: 1.4rem;
+  line-height: 1.4;
+  width: 80%;
+}
+
+.hero__content--plans {
+  margin-top: 3rem;
+}
+
+.hero__content--plans a {
+  width: initial;
+  color: var(--color-secondary-light);
+  text-transform: uppercase;
+  font-size: 1.3rem;
+  letter-spacing: 0.1rem;
+  padding: 1rem 2rem;
+  border: var(--color-secondary-light) solid 0.2rem;
+  transition: all 0.5s ease-in-out;
+  font-weight: 400;
+}
+
+.hero__content--plans a:hover,
+.hero__content--plans a:active {
+  background-color: var(--color-secondary-light);
+  color: var(--color-primary);
+}
+
+.hero__image {
+  width: 50%;
+}
+.hero__image img {
+  width: 100%;
+  /* object-fit: cover; */
+}
+
 .company {
   display: flex;
   justify-content: center;
@@ -128,15 +200,16 @@ a:visited {
 }
 
 .company-container {
+  width: 80%;
   display: grid;
-  grid-template-columns: repeat(3, minmax(17rem, 30rem));
+
+  grid-template-columns: repeat(3, 1fr);
   grid-template-rows: minmax(15rem, 20rem) minmax(17rem, 30rem) minmax(
       15rem,
       20rem
     );
   grid-gap: 2.4rem;
   place-content: center;
-  /* margin: 0rem calc(2rem); */
 }
 
 .company__header,
@@ -226,8 +299,8 @@ a:visited {
 .footer-container {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  padding: 6rem 4rem;
+  width: 80%;
+  padding: 6rem 0;
 }
 
 .footer__header {
@@ -270,7 +343,7 @@ a:visited {
 }
 
 .footer__content--column > p {
-  justify-self: center;
+  /* justify-self: center; */
 
   font-size: 1.3rem;
   color: var(--color-secondary-dark);
@@ -285,7 +358,8 @@ a:visited {
   margin-bottom: 2.2rem;
 }
 
-.footer__content--column div > p {
+/* TODO: Figure out why the footer tags are being hovered  */
+.footer__content--column div p {
   margin-bottom: 0.7rem;
   font-weight: 700;
   font-size: 700;
@@ -296,8 +370,8 @@ a:visited {
   transition: all 0.5s ease-in-out;
 }
 
-.footer__content--column div > p:hover,
-.footer__content--column div > p:active {
+.footer__content--column div p:hover,
+.footer__content--column div p:active {
   text-decoration: underline 0.2rem var(--color-primary);
 }
 
@@ -479,6 +553,58 @@ a:visited {
   .header__nav--menu li:last-child a:active {
     background-color: var(--color-secondary-light);
     color: var(--color-primary);
+  }
+
+  .hero {
+    background-image: url('./images/bg-pattern-intro-left-mobile.svg'),
+      url('./images/bg-pattern-intro-right-mobile.svg'),
+      linear-gradient(to top, var(--color-primary) 60%, transparent 40%);
+    background-repeat: no-repeat, no-repeat;
+    background-position: bottom left, top right;
+  }
+
+  .hero-container {
+    flex-direction: column-reverse;
+    width: 100%;
+    color: var(--color-secondary-light);
+    margin: initial;
+    height: 100%;
+    padding: initial;
+  }
+
+  .hero__image,
+  .hero__content {
+    width: 100%;
+    height: 50%;
+  }
+
+  .hero__content {
+    display: flex;
+    align-items: center;
+  }
+
+  .hero__content--title {
+    font-size: 5rem;
+    width: 75%;
+    font-family: 'DM Serif Display', serif;
+    line-height: 1;
+    text-align: center;
+
+    margin-bottom: 2rem;
+  }
+
+  .hero__content--para {
+    color: var(--color-secondary-light);
+    font-size: 1.4rem;
+    line-height: 2;
+    width: 100%;
+    text-align: center;
+  }
+
+  .hero__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   .company-container {
